--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,9 +1,9 @@
 export(extractAAC)
 export(extractAPAAC)
+export(extractConTriad)
 export(extractCTDC)
 export(extractCTDD)
 export(extractCTDT)
-export(extractCTriad)
 export(extractDC)
 export(extractGeary)
 export(extractMoran)
@@ -11,8 +11,8 @@ export(extractMoreauBroto)
 export(extractPAAC)
 export(extractQSO)
 export(extractSOCN)
-export(extractTC)
-export(getUniProt)
+export(extractTriC)
+export(getFASTAFromUniProt)
 export(protcheck)
 export(protseg)
 export(readFASTA)
