readPDB and getUniProt documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,7 +13,9 @@ export(extractQSO)
 export(extractSOCN)
 export(extractTriC)
 export(getFASTAFromUniProt)
+export(getSeqFromUniProt)
 export(protcheck)
 export(protseg)
 export(readFASTA)
+export(readPDB)
 exportPattern("^[^\\.]")
