--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,21 +1,21 @@
-export(extractAAC)
-export(extractAPAAC)
-export(extractConTriad)
-export(extractCTDC)
-export(extractCTDD)
-export(extractCTDT)
-export(extractDC)
-export(extractGeary)
-export(extractMoran)
-export(extractMoreauBroto)
-export(extractPAAC)
-export(extractQSO)
-export(extractSOCN)
-export(extractTriC)
+export(checkProt)
+export(extractProtAAC)
+export(extractProtAPAAC)
+export(extractProtCTDC)
+export(extractProtCTDD)
+export(extractProtCTDT)
+export(extractProtCTriad)
+export(extractProtDC)
+export(extractProtGeary)
+export(extractProtMoran)
+export(extractProtMoreauBroto)
+export(extractProtPAAC)
+export(extractProtQSO)
+export(extractProtSOCN)
+export(extractProtTC)
 export(getFASTAFromUniProt)
 export(getSeqFromUniProt)
-export(protcheck)
-export(protseg)
 export(readFASTA)
 export(readPDB)
+export(segProt)
 exportPattern("^[^\\.]")
