--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,6 +32,65 @@ Collate:
     '202-getProtKEGG.R'
     '203-getProtRCSBPDB.R'
     '204-getProt.R'
+    '301-extractDrugALOGP.R'
+    '302-extractDrugApol.R'
+    '303-extractDrugAcidicGroupCount.R'
+    '304-extractDrugAminoAcidCount.R'
+    '305-extractDrugAromaticAtomsCount.R'
+    '306-extractDrugAromaticBondsCount.R'
+    '307-extractDrugAtomCount.R'
+    '308-extractDrugAutocorrelationCharge.R'
+    '309-extractDrugAutocorrelationMass.R'
+    '310-extractDrugAutocorrelationPolarizability.R'
+    '311-extractDrugBCUT.R'
+    '312-extractDrugBPol.R'
+    '313-extractDrugBasicGroupCount.R'
+    '314-extractDrugBondCount.R'
+    '315-extractDrugCPSA.R'
+    '316-extractDrugCarbonTypes.R'
+    '317-extractDrugChiChain.R'
+    '318-extractDrugChiCluster.R'
+    '319-extractDrugChiPathCluster.R'
+    '320-extractDrugChiPath.R'
+    '321-extractDrugEccentricConnectivityIndex.R'
+    '322-extractDrugFMF.R'
+    '323-extractDrugFragmentComplexity.R'
+    '324-extractDrugGravitationalIndex.R'
+    '325-extractDrugHBondAcceptorCount.R'
+    '326-extractDrugHBondDonorCount.R'
+    '327-extractDrugHybridizationRatio.R'
+    '328-extractDrugIPMolecularLearning.R'
+    '329-extractDrugKappaShapeIndices.R'
+    '330-extractDrugKierHallSmarts.R'
+    '331-extractDrugLargestChain.R'
+    '332-extractDrugLargestPiSystem.R'
+    '333-extractDrugLengthOverBreadth.R'
+    '334-extractDrugLongestAliphaticChain.R'
+    '335-extractDrugMDE.R'
+    '336-extractDrugMannholdLogP.R'
+    '337-extractDrugMomentOfInertia.R'
+    '338-extractDrugPetitjeanNumber.R'
+    '339-extractDrugPetitjeanShapeIndex.R'
+    '340-extractDrugRotatableBondsCount.R'
+    '341-extractDrugRuleOfFive.R'
+    '342-extractDrugTPSA.R'
+    '343-extractDrugVABC.R'
+    '344-extractDrugVAdjMa.R'
+    '345-extractDrugWHIM.R'
+    '346-extractDrugWeight.R'
+    '347-extractDrugWeightedPath.R'
+    '348-extractDrugWienerNumbers.R'
+    '349-extractDrugXLogP.R'
+    '350-extractDrugZagrebIndex.R'
+    '371-extractDrugStandard.R'
+    '372-extractDrugExtended.R'
+    '373-extractDrugGraph.R'
+    '374-extractDrugHybridization.R'
+    '375-extractDrugMACCS.R'
+    '376-extractDrugEstate.R'
+    '377-extractDrugPubChem.R'
+    '378-extractDrugKR.R'
+    '379-extractDrugShortestPath.R'
     '401-extractProtAAC.R'
     '402-extractProtDC.R'
     '403-extractProtTC.R'
