--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -107,5 +107,11 @@ Collate:
     '414-extractProtAPAAC.R'
     '501-readFASTA.R'
     '502-readPDB.R'
-    '503-checkProt.R'
-    '504-segProt.R'
+    '503-readMolFromSDF.R'
+    '504-readMolFromSmi.R'
+    '505-checkProt.R'
+    '506-segProt.R'
+    '601-getCPI.R'
+    '602-getPPI.R'
+    '701-calcDrugSim.R'
+    '702-calcProtSim.R'
