--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,8 +13,18 @@ export(extractProtPAAC)
 export(extractProtQSO)
 export(extractProtSOCN)
 export(extractProtTC)
+export(getDrug)
 export(getFASTAFromUniProt)
+export(getMolFromCAS)
+export(getMolFromChEMBL)
+export(getMolFromDrugBank)
+export(getMolFromKEGG)
+export(getMolFromPubChem)
 export(getSeqFromUniProt)
+export(getSmiFromChEMBL)
+export(getSmiFromDrugBank)
+export(getSmiFromKEGG)
+export(getSmiFromPubChem)
 export(readFASTA)
 export(readPDB)
 export(segProt)
