doc in progress

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,4 +1,7 @@
 export(checkProt)
+export(extractDrugAcidicGroupCount)
+export(extractDrugALOGP)
+export(extractDrugApol)
 export(extractProtAAC)
 export(extractProtAPAAC)
 export(extractProtCTDC)
@@ -14,12 +17,17 @@ export(extractProtQSO)
 export(extractProtSOCN)
 export(extractProtTC)
 export(getDrug)
+export(getFASTAFromKEGG)
 export(getFASTAFromUniProt)
 export(getMolFromCAS)
 export(getMolFromChEMBL)
 export(getMolFromDrugBank)
 export(getMolFromKEGG)
 export(getMolFromPubChem)
+export(getPDBFromRCSBPDB)
+export(getProt)
+export(getSeqFromKEGG)
+export(getSeqFromRCSBPDB)
 export(getSeqFromUniProt)
 export(getSmiFromChEMBL)
 export(getSmiFromDrugBank)
