--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,7 +1,30 @@
 export(checkProt)
 export(extractDrugAcidicGroupCount)
 export(extractDrugALOGP)
+export(extractDrugAminoAcidCount)
 export(extractDrugApol)
+export(extractDrugAromaticAtomsCount)
+export(extractDrugAromaticBondsCount)
+export(extractDrugAtomCount)
+export(extractDrugAutocorrelationCharge)
+export(extractDrugAutocorrelationMass)
+export(extractDrugAutocorrelationPolarizability)
+export(extractDrugBasicGroupCount)
+export(extractDrugBondCount)
+export(extractDrugBPol)
+export(extractDrugFMF)
+export(extractDrugIPMolecularLearning)
+export(extractDrugLargestChain)
+export(extractDrugLargestPiSystem)
+export(extractDrugLongestAliphaticChain)
+export(extractDrugMannholdLogP)
+export(extractDrugPetitjeanNumber)
+export(extractDrugRotatableBondsCount)
+export(extractDrugRuleOfFive)
+export(extractDrugVABC)
+export(extractDrugVAdjMa)
+export(extractDrugWeight)
+export(extractDrugZagrebIndex)
 export(extractProtAAC)
 export(extractProtAPAAC)
 export(extractProtCTDC)
