doc in progress

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,18 +12,25 @@ export(extractDrugAutocorrelationPolarizability)
 export(extractDrugBasicGroupCount)
 export(extractDrugBondCount)
 export(extractDrugBPol)
+export(extractDrugCarbonTypes)
+export(extractDrugECI)
 export(extractDrugFMF)
+export(extractDrugFragmentComplexity)
 export(extractDrugIPMolecularLearning)
 export(extractDrugLargestChain)
 export(extractDrugLargestPiSystem)
 export(extractDrugLongestAliphaticChain)
 export(extractDrugMannholdLogP)
+export(extractDrugMDE)
 export(extractDrugPetitjeanNumber)
+export(extractDrugPetitjeanShapeIndex)
 export(extractDrugRotatableBondsCount)
 export(extractDrugRuleOfFive)
+export(extractDrugTPSA)
 export(extractDrugVABC)
 export(extractDrugVAdjMa)
 export(extractDrugWeight)
+export(extractDrugWienerNumbers)
 export(extractDrugZagrebIndex)
 export(extractProtAAC)
 export(extractProtAPAAC)
