descriptor docs finished; init fingerprint docs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,27 +10,50 @@ export(extractDrugAutocorrelationCharge)
 export(extractDrugAutocorrelationMass)
 export(extractDrugAutocorrelationPolarizability)
 export(extractDrugBasicGroupCount)
+export(extractDrugBCUT)
 export(extractDrugBondCount)
 export(extractDrugBPol)
 export(extractDrugCarbonTypes)
+export(extractDrugChiChain)
+export(extractDrugChiCluster)
+export(extractDrugChiPath)
+export(extractDrugChiPathCluster)
+export(extractDrugCPSA)
 export(extractDrugECI)
+export(extractDrugExtended)
+export(extractDrugExtendedComplete)
 export(extractDrugFMF)
 export(extractDrugFragmentComplexity)
+export(extractDrugGraph)
+export(extractDrugGraphComplete)
+export(extractDrugGravitationalIndex)
+export(extractDrugHBondAcceptorCount)
+export(extractDrugHBondDonorCount)
+export(extractDrugHybridizationRatio)
 export(extractDrugIPMolecularLearning)
+export(extractDrugKappaShapeIndices)
+export(extractDrugKierHallSmarts)
 export(extractDrugLargestChain)
 export(extractDrugLargestPiSystem)
+export(extractDrugLengthOverBreadth)
 export(extractDrugLongestAliphaticChain)
 export(extractDrugMannholdLogP)
 export(extractDrugMDE)
+export(extractDrugMomentOfInertia)
 export(extractDrugPetitjeanNumber)
 export(extractDrugPetitjeanShapeIndex)
 export(extractDrugRotatableBondsCount)
 export(extractDrugRuleOfFive)
+export(extractDrugStandard)
+export(extractDrugStandardComplete)
 export(extractDrugTPSA)
 export(extractDrugVABC)
 export(extractDrugVAdjMa)
 export(extractDrugWeight)
+export(extractDrugWeightedPath)
+export(extractDrugWHIM)
 export(extractDrugWienerNumbers)
+export(extractDrugXLogP)
 export(extractDrugZagrebIndex)
 export(extractProtAAC)
 export(extractProtAPAAC)
