finished fingerprint doc

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,8 @@ export(extractDrugChiPath)
 export(extractDrugChiPathCluster)
 export(extractDrugCPSA)
 export(extractDrugECI)
+export(extractDrugEstate)
+export(extractDrugEstateComplete)
 export(extractDrugExtended)
 export(extractDrugExtendedComplete)
 export(extractDrugFMF)
@@ -29,21 +31,31 @@ export(extractDrugGraphComplete)
 export(extractDrugGravitationalIndex)
 export(extractDrugHBondAcceptorCount)
 export(extractDrugHBondDonorCount)
+export(extractDrugHybridization)
+export(extractDrugHybridizationComplete)
 export(extractDrugHybridizationRatio)
 export(extractDrugIPMolecularLearning)
 export(extractDrugKappaShapeIndices)
 export(extractDrugKierHallSmarts)
+export(extractDrugKR)
+export(extractDrugKRComplete)
 export(extractDrugLargestChain)
 export(extractDrugLargestPiSystem)
 export(extractDrugLengthOverBreadth)
 export(extractDrugLongestAliphaticChain)
+export(extractDrugMACCS)
+export(extractDrugMACCSComplete)
 export(extractDrugMannholdLogP)
 export(extractDrugMDE)
 export(extractDrugMomentOfInertia)
 export(extractDrugPetitjeanNumber)
 export(extractDrugPetitjeanShapeIndex)
+export(extractDrugPubChem)
+export(extractDrugPubChemComplete)
 export(extractDrugRotatableBondsCount)
 export(extractDrugRuleOfFive)
+export(extractDrugShortestPath)
+export(extractDrugShortestPathComplete)
 export(extractDrugStandard)
 export(extractDrugStandardComplete)
 export(extractDrugTPSA)
@@ -87,6 +99,8 @@ export(getSmiFromDrugBank)
 export(getSmiFromKEGG)
 export(getSmiFromPubChem)
 export(readFASTA)
+export(readMolFromSDF)
+export(readMolFromSmi)
 export(readPDB)
 export(segProt)
 exportPattern("^[^\\.]")
