finished all docs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,5 +1,7 @@
+export(calcDrugSim)
 export(checkProt)
 export(extractDrugAcidicGroupCount)
+export(extractDrugAIO)
 export(extractDrugALOGP)
 export(extractDrugAminoAcidCount)
 export(extractDrugApol)
@@ -81,6 +83,7 @@ export(extractProtPAAC)
 export(extractProtQSO)
 export(extractProtSOCN)
 export(extractProtTC)
+export(getCPI)
 export(getDrug)
 export(getFASTAFromKEGG)
 export(getFASTAFromUniProt)
@@ -90,6 +93,7 @@ export(getMolFromDrugBank)
 export(getMolFromKEGG)
 export(getMolFromPubChem)
 export(getPDBFromRCSBPDB)
+export(getPPI)
 export(getProt)
 export(getSeqFromKEGG)
 export(getSeqFromRCSBPDB)
