--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: Rcpi
 Type: Package
-Title: Compound-Protein Interactions with R
+Title: Toolkit for Compound-Protein Interaction in Drug Discovery
 Version: 1.0
-Date: 2014-02-27
+Date: 2014-02-28
 Description: The Rcpi package offers an R/Bioconductor package emphasizing the
     comprehensive integration of bioinformatics and chemoinformatics into a
     molecular informatics platform for drug discovery.
