fixes for package checking

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: Rcpi
 Type: Package
 Title: Toolkit for Compound-Protein Interaction in Drug Discovery
-Version: 1.0.0
-Date: 2014-02-28
+Version: 0.99.0
+Date: 2014-03-01
 Description: The Rcpi package offers an R/Bioconductor package emphasizing the
     comprehensive integration of bioinformatics and chemoinformatics into a
     molecular informatics platform for drug discovery.
@@ -13,18 +13,16 @@ License: Artistic-2.0
 URL: https://github.com/road2stat/Rcpi/
 BugReports: https://github.com/road2stat/Rcpi/issues
 LazyData: yes
-Depends:
+Imports:
     RCurl,
     rjson,
-    rcdk
-Suggests: 
+    rcdk,
+    foreach,
+    doParallel,
     Biostrings,
     GOSemSim,
     ChemmineOB,
     ChemmineR,
-    fmcsR,
-    foreach,
-    doParallel,
-    doMC
+    fmcsR
 biocViews: Software, DataRepresentation, Bioinformatics, Infrastructure,
     DataImport, Proteomics, GO, Clustering, NetworkAnalysis, Visualization
