--- a/NAMESPACE
+++ b/NAMESPACE
@@ -125,3 +125,13 @@ export(readPDB)
 export(searchDrug)
 export(segProt)
 exportPattern("^[^\\.]")
+import(Biostrings)
+import(ChemmineOB)
+import(ChemmineR)
+import(GOSemSim)
+import(RCurl)
+import(doParallel)
+import(fmcsR)
+import(foreach)
+import(rcdk)
+import(rjson)
