define ChemmineOB as Enhances to resolve the check exec halt problem

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,8 +21,8 @@ Imports:
     doParallel,
     Biostrings,
     GOSemSim,
-    ChemmineOB,
     ChemmineR,
     fmcsR
+Enhances: ChemmineOB
 biocViews: Software, DataRepresentation, Bioinformatics, Infrastructure,
     DataImport, Proteomics, GO, Clustering, NetworkAnalysis, Visualization
