--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,6 +18,8 @@ URL: https://github.com/road2stat/Rcpi
 BugReports: https://github.com/road2stat/Rcpi/issues
 LazyData: yes
 Imports:
+    stats,
+    utils,
     methods,
     RCurl,
     rjson,
