--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: Rcpi
 Type: Package
 Title: Molecular Informatics Toolkit for Compound-Protein Interaction in Drug Discovery
-Version: 1.11.5
-Date: 2016-12-24
+Version: 1.11.6
+Date: 2016-12-29
 Description: Rcpi offers a molecular informatics toolkit with a
     comprehensive integration of bioinformatics and
     chemoinformatics tools for drug discovery.
@@ -11,10 +11,9 @@ Authors@R: c(
     person("Dongsheng", "Cao", role = "aut"),
     person("Qingsong", "Xu", email = "qsxu@csu.edu.cn", role = c("aut"))
     )
-Author: Nan Xiao <me@nanx.me>, Dongsheng Cao, Qingsong Xu <qsxu@csu.edu.cn>
 Maintainer: Nan Xiao <me@nanx.me>
 License: Artistic-2.0
-URL: https://github.com/road2stat/Rcpi
+URL: http://nanx.me/Rcpi/, https://github.com/road2stat/Rcpi
 BugReports: https://github.com/road2stat/Rcpi/issues
 LazyData: yes
 Imports:
