--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,6 +15,14 @@ cache:
 
 # Adapt as necessary starting from here
 
+environment:
+  global:
+    WARNINGS_ARE_ERRORS: 1
+
+  matrix:
+  - R_VERSION: release
+    R_ARCH: x64
+
 build_script:
   - travis-tool.sh install_bioc BiocInstaller
   - travis-tool.sh install_deps
