--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,14 @@ cache: packages
 r: bioc-devel
 jdk:
   - oraclejdk8
+script:
+  - sudo apt-get update && sudo apt-get install oracle-java8-installer
+  - java -version
+before_install:
+ - export JAVA_HOME=/usr/lib/jvm/java-8-oracle/jre
+ - export PATH=$PATH:$JAVA_HOME/bin
+ - export LD_LIBRARY_PATH=/usr/lib/jvm/java-8-oracle/lib/amd64:/usr/lib/jvm/java-8-oracle/jre/lib/amd64/server
+ - sudo R CMD javareconf
 addons:
   apt:
     packages:
