--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,7 +21,7 @@ environment:
 
   matrix:
   - R_VERSION: release
-    BIOC_USE_DEVEL: false
+    BIOC_USE_DEVEL: FALSE
     R_ARCH: x64
 
 build_script:
