--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,9 +3,8 @@ Version: 1.21.1
 Type: Package
 Title: Molecular Informatics Toolkit for Compound-Protein
     Interaction in Drug Discovery
-Description: Rcpi offers a molecular informatics toolkit with a
-    comprehensive integration of bioinformatics and
-    chemoinformatics tools for drug discovery.
+Description: A molecular informatics toolkit with an integration of
+    bioinformatics and chemoinformatics tools for drug discovery.
 Authors@R: c(
     person("Nan", "Xiao", email = "me@nanx.me", role = c("aut", "cre")),
     person("Dong-Sheng", "Cao", role = "aut"),
